--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,23 @@
     "esports",
     "nlw",
     "react-native",
-    "rocketseat"
+    "rocketseat",
+    "node",
+    "express"
   ],
   "author": "bfukumori",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^4.3.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.7.18",
+    "prisma": "^4.3.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
