--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,18 +16,19 @@
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "expo": "~46.0.9",
+    "expo-clipboard": "~3.1.0",
     "expo-font": "~10.2.0",
     "expo-linear-gradient": "~11.4.0",
+    "expo-modules-core": "~0.11.5",
+    "expo-notifications": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "phosphor-react-native": "^1.1.2",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.3.0",
-    "expo-clipboard": "~3.1.0",
-    "expo-notifications": "~0.16.1",
-    "expo-modules-core": "~0.11.5"
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
